--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^3.26.3",
     "aws-amplify": "^2.2.0",
     "aws-amplify-react": "^3.1.1",
+    "aws-sdk": "^2.614.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "query-string": "^6.9.0",
