--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "*",
     "@types/request": "*",
+    "@types/react-redux": "*",
     "antd": "^3.26.3",
     "aws-amplify": "^2.2.0",
     "aws-amplify-react": "^3.1.1",
@@ -29,7 +30,8 @@
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2",
     "uuid": "*",
-    "request": "*"
+    "request": "*",
+    "react-redux": "*"
   },
   "scripts": {
     "start": "PORT=9090 react-scripts start",
