--- a/package.json
+++ b/package.json
@@ -6,34 +6,37 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/debug": "*",
     "@types/jest": "^24.0.24",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap-table": "^4.3.7",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/uuid": "*",
-    "@types/request": "*",
     "@types/react-redux": "*",
-    "@types/debug": "*",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/request": "*",
+    "@types/uuid": "*",
     "antd": "^3.26.3",
+    "autoprefixer": "^9.7.5",
     "aws-amplify": "^2.2.0",
     "aws-amplify-react": "^3.1.1",
     "aws-sdk": "^2.614.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "debug": "*",
+    "postcss-cli": "^7.1.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
+    "react-redux": "*",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2",
-    "uuid": "*",
     "request": "*",
-    "react-redux": "*",
-    "debug": "*"
+    "tailwindcss": "^1.2.0",
+    "typescript": "~3.7.2",
+    "uuid": "*"
   },
   "scripts": {
     "start": "PORT=9090 react-scripts start",
