--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss assets/tailwind.css -o public/assets/main.css",
-    "watch:css": "postcss assets/tailwind.css -o public/assets/main.css"
+    "build:css": "postcss assets/tailwind.css -o src/styles/main.css",
+    "watch:css": "postcss assets/tailwind.css -o src/styles/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
