--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "uuid": "*"
   },
   "scripts": {
-    "start": "PORT=9090 react-scripts start && npm run watch:css",
+    "start": "PORT=9090 react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
