Re-innited and changed project name. Removed a lot of old logic.

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "snaptest",
+    "projectName": "prerelease",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
