--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-annotation": "^0.9.10",
     "react-redux": "*",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
