--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/ui": "^0.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -31,7 +32,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "request": "*",
-    "tailwindcss": "^1.2.0",
+    "tailwindcss": "^1.3.3",
     "typescript": "~3.7.2",
     "uuid": "*"
   },
@@ -63,6 +64,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "babel-jest": "^24.9.0",
     "eslint-plugin-jest": "^23.1.1",
     "jest": "^24.9.0"
