Added IAM role to enable calling graphql api from Lambda that uploads to appetize.io..

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,29 +1,33 @@
 {
-	"auth": {
-		"snaptestbd08bf8b": {
-			"service": "Cognito",
-			"providerPlugin": "awscloudformation",
-			"dependsOn": []
-		}
-	},
-	"storage": {},
-	"function": {},
-	"api": {
-		"SenseTestApi": {
-			"service": "AppSync",
-			"providerPlugin": "awscloudformation",
-			"output": {
-				"authConfig": {
-					"additionalAuthenticationProviders": [],
-					"defaultAuthentication": {
-						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
-						"userPoolConfig": {
-							"userPoolId": "authsnaptestbd08bf8b"
-						}
-					}
-				}
-			}
-		}
-	},
-	"hosting": {}
+    "auth": {
+        "snaptestbd08bf8b": {
+            "service": "Cognito",
+            "providerPlugin": "awscloudformation",
+            "dependsOn": []
+        }
+    },
+    "storage": {},
+    "function": {},
+    "api": {
+        "SenseTestApi": {
+            "service": "AppSync",
+            "providerPlugin": "awscloudformation",
+            "output": {
+                "authConfig": {
+                    "additionalAuthenticationProviders": [
+                        {
+                            "authenticationType": "AWS_IAM"
+                        }
+                    ],
+                    "defaultAuthentication": {
+                        "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+                        "userPoolConfig": {
+                            "userPoolId": "authsnaptestbd08bf8b"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "hosting": {}
 }
