Added function to upload to appetize (and update the graphql db after with app build.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,33 +1,39 @@
 {
-    "auth": {
-        "snaptestbd08bf8b": {
-            "service": "Cognito",
-            "providerPlugin": "awscloudformation",
-            "dependsOn": []
-        }
-    },
-    "storage": {},
-    "function": {},
-    "api": {
-        "SenseTestApi": {
-            "service": "AppSync",
-            "providerPlugin": "awscloudformation",
-            "output": {
-                "authConfig": {
-                    "additionalAuthenticationProviders": [
-                        {
-                            "authenticationType": "AWS_IAM"
-                        }
-                    ],
-                    "defaultAuthentication": {
-                        "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-                        "userPoolConfig": {
-                            "userPoolId": "authsnaptestbd08bf8b"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "hosting": {}
+	"auth": {
+		"snaptestbd08bf8b": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"storage": {},
+	"function": {
+		"appetizeFunction": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda"
+		}
+	},
+	"api": {
+		"SenseTestApi": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [
+						{
+							"authenticationType": "AWS_IAM"
+						}
+					],
+					"defaultAuthentication": {
+						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
+						"userPoolConfig": {
+							"userPoolId": "authsnaptestbd08bf8b"
+						}
+					}
+				}
+			}
+		}
+	},
+	"hosting": {}
 }
