--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "3.4.1",
     "request": "*",
     "tailwindcss": "^1.3.3",
+    "tailwindcss-filters": "^3.0.0",
     "typescript": "~3.7.2",
     "uuid": "*"
   },
