--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.614.0",
     "axios": "^0.19.2",
     "debug": "*",
+    "moment": "^2.24.0",
     "postcss-cli": "^7.1.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
