--- a/amplify/backend/auth/snaptestbd08bf8b/snaptestbd08bf8b-cloudformation-template.yml
+++ b/amplify/backend/auth/snaptestbd08bf8b/snaptestbd08bf8b-cloudformation-template.yml
@@ -112,7 +112,7 @@ Parameters:
               
   thirdPartyAuth:
     Type: String
-                      
+          
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -181,8 +181,7 @@ Resources:
           RequireSymbols: false
           RequireUppercase: false
       
-      UsernameAttributes:
-      - email
+      UsernameAttributes: !Ref usernameAttributes
           
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
