--- a/staging.env
+++ b/staging.env
@@ -1,2 +1,1 @@
-REACT_APP_SECRET_CODE=123
-REACT_APP_HOST_ENV=staging
+ASSETS_SERVICE_URL=https://fxfsi5q2o3.execute-api.us-east-1.amazonaws.com/staging
