Changed prod endpoint

--- a/prod.env
+++ b/prod.env
@@ -1,1 +1,1 @@
-ASSETS_SERVICE_URL=https://r5c0aydhwh.execute-api.us-east-1.amazonaws.com/prod
+ASSETS_SERVICE_URL=https://azvb4o8wo8.execute-api.us-east-1.amazonaws.com/prod
