Added transition to the ResolveIssueModal.:

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "*",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.4",
     "@types/request": "*",
     "@types/uuid": "*",
     "antd": "^3.26.3",
@@ -24,6 +25,7 @@
     "axios": "^0.19.2",
     "debug": "*",
     "framer-motion": "^1.10.3",
+    "install": "^0.13.0",
     "moment": "^2.24.0",
     "postcss-cli": "^7.1.0",
     "query-string": "^6.9.0",
@@ -34,6 +36,7 @@
     "react-redux": "*",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.0",
     "request": "*",
     "tailwindcss": "^1.3.3",
     "tailwindcss-filters": "^3.0.0",
