--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "*",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-textarea-autosize": "^4.3.5",
     "@types/react-transition-group": "^4.2.4",
     "@types/request": "*",
     "@types/uuid": "*",
@@ -36,6 +37,7 @@
     "react-redux": "*",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-textarea-autosize": "^7.1.2",
     "react-transition-group": "^4.4.0",
     "request": "*",
     "tailwindcss": "^1.3.3",
